--- a/app/src/main/res/layout/activity_lector_qr.xml
+++ b/app/src/main/res/layout/activity_lector_qr.xml
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
@@ -43,8 +43,9 @@
 
     <TextView
         android:id="@+id/txtnombredealumno"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,9 +63,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
+        android:id="@+id/TextGradoseccion"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,13 +85,14 @@
 
     <TextView
         android:id="@+id/TextDate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/TextGradoseccion" />
 
     <TextView
         android:id="@+id/textView12"
@@ -103,8 +106,9 @@
 
     <TextView
         android:id="@+id/TextHora"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,14 +116,14 @@
         app:layout_constraintTop_toBottomOf="@+id/TextDate" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttongrabard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:text="INGRESAR ASISTENCIA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextHora" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewDni" />
 
     <TextView
         android:id="@+id/textView19"
@@ -133,8 +137,9 @@
 
     <TextView
         android:id="@+id/textViewDni"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
